# jn_shell_demo

./: .gitignore  README.md  ansible.ipynb  hosts  playbook.yml  pyproject.toml  requirements.txt
